--- a/css/css.css
+++ b/css/css.css
@@ -68,6 +68,7 @@ body
 }
 .mainmu
 {
+	height: 29px;
 	position:relative;
 	border-radius:10px;
 	background:url(../icon/menu.fw.png) center no-repeat;
@@ -75,11 +76,13 @@ body
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	/* z-index: 3; */
 }
 .mainmu:hover
 {
 	background:url(../icon/menu2.fw.png) center no-repeat;
 	background-size:cover;
+	z-index: 5;
 }
 .mainmu2
 {
@@ -90,11 +93,18 @@ body
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	top: -10px;
+	z-index: 9;
 }
 .mainmu2:hover
 {
 	background:url(../icon/menu4.fw.png) center no-repeat;
 	background-size:cover;
+}
+.mw{
+	left: 100px;
+	position: relative;
+	display: none;
 }
 #lf
 {
