--- a/css/css.css
+++ b/css/css.css
@@ -84,12 +84,14 @@ body
 .mainmu2
 {
 	position:relative;
+	left: 50px;
 	border-radius:10px;
 	background-image:url("../icon/menu3.fw.png");
 	background-size:100% 100%;
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	z-index: 10;
 }
 .mainmu2:hover
 {
